// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`prettyPrint cyclic 1`] = `
"
      [33m[1m⚠ Warning, you have circular dependencies![22m[39m

      [33m● a[39m
    
Nothing to deploy
"
`;

exports[`prettyPrint normal 1`] = `
"

[32m[1mℹ Run the following to deploy[22m[39m
    
# ❯ level 0:
[40m[32m[39m[49m
[40m[32m#tfinjs/a@1[39m[49m
[40m[32mcd [1m/a[22m && tf init && tf apply -auto-approve[39m[49m
    "
`;

exports[`prettyPrint normal with graph 1`] = `
"

[32m[1mℹ Run the following to deploy[22m[39m
    
# ❯ level 0:
[40m[32m[39m[49m
[40m[32m#tfinjs/c@3[39m[49m
[40m[32mcd [1m/c[22m && tf init && tf apply -auto-approve[39m[49m &&
[40m[32m[39m[49m
[40m[32m#tfinjs/d@4[39m[49m
[40m[32mcd [1m/d[22m && tf init && tf apply -auto-approve[39m[49m


# ❯ level 1:
[40m[32m[39m[49m
[40m[32m#tfinjs/b@2[39m[49m
[40m[32mcd [1m/b[22m && tf init && tf apply -auto-approve[39m[49m


# ❯ level 2:
[40m[32m[39m[49m
[40m[32m#tfinjs/a@1[39m[49m
[40m[32mcd [1m/a[22m && tf init && tf apply -auto-approve[39m[49m
    "
`;

exports[`prettyPrint remove 1`] = `
"

[32m[1mℹ Run the following to deploy[22m[39m
    
# ❯ level 0:
[40m[32m[39m[49m
[40m[32m#tfinjs/a@1[39m[49m
[40m[32mcd [1m/a[22m && tf init && tf apply -auto-approve[39m[49m
    

[31m[1mDelete the following resources[22m[39m
    [40m[31m[39m[49m
[40m[31mcd [1m/c[22m && tf init && tf destroy -auto-approve &&[39m[49m
[40m[31m[39m[49m
[40m[31mcd [1m/d[22m && tf init && tf destroy -auto-approve[39m[49m
  "
`;
